# Pap

./: .gitignore  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  requirements.txt  requirements_windows.txt  run.ps1  run.sh  run.sh.man  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
data/: config.toml  emoji.db  style.toml
md/: Cargo.toml
md/md_encoder/: Cargo.toml  build.rs
md/md_encoder/benches/: proto_benchmark.rs
md/md_encoder/bindings/: mdparser.h
md/md_encoder/bindings/c/: mdparser.c
md/md_encoder/bindings/python/: md_encoder.py
md/md_encoder/src/: ffi.rs  lib.rs  proto_generator.rs
md/md_net/: Cargo.toml
md/md_parser/: Cargo.toml
md/md_parser/benches/: parser_benchmark.rs
md/md_parser/src/: bytes.rs  err.rs  expr.rs  generator.rs  lib.rs  parser.rs  spliter.rs
md/md_wasm/: Cargo.toml
md/md_wasm/src/: js_expr.rs  js_generator.rs  lib.rs
md/proto/: pap_block.proto
md/test/: test.md
md_parser/: Cargo.toml
scripts/: dev.ps1  dev.sh  pap.ps1  pap.sh  pap.sh.man  requirements.txt  requirements_release.txt  run.ps1  run.sh  run.sh.man  setup.ps1  setup.sh  tool.ps1  tool.sh  tool.sh.man
sim/: Cargo.toml
sim/src/: lib.rs  main.rs  model.rs  system.rs
src/: App.vue  counter.ts  main.ts  style.css  utils.ts
src-python/: app.py  backend.py  config.py  frontend.py
src-python/model/: config.py  note.py  note_group.py  resource_group.py
src-python/router/: config.py  content.py  emoji.py  login.py  net.py  note.py  resource.py  search.py  tag.py
src-python/schemas/: config.py  content.py  emoji.py  net.py  note.py  note_base.py  resource.py  resource_base.py  tag.py  tag_base.py  token.py
src-python/service/: config.py  database.py  emoji.py  logger.py  net.py  security.py
src-python/test/: database_test_base.py  test_config.py  test_content.py  test_emoji.py  test_login.py  test_note.py  test_resource.py  test_tag.py
(+105 files in other folders)
