[package]
name = "md_parser"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pap"]
pap = ["math", "extra"]
extra = []
math = []
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.8.0", optional = true }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.66", features = ['console'] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parser_benchmark"
harness = false
